# boardgame-rules-assistant

./: .dvcignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  data.dvc
.dvc/: config
data_work/: EDA.ipynb  README.md  pyproject.toml
data_work/metadata/: rules_texts_cleaned_report.csv
data_work/scripts/: rules_cleaner.py  rules_parcer.py  rules_text_extractor.py
research/: .flake8  pyproject.toml
research/data_work/: EDA.ipynb  README.md
research/data_work/artifacts/parser/: failed_rules_links.txt  games_links.txt  success_rules_links.txt
research/data_work/metadata/: docs.csv  game_docs.csv  rules_index.csv  rules_texts_cleaned_report.csv
research/data_work/scripts/: rules_cleaner.py  rules_parser.py  rules_text_extractor.py
research/rag_experiments/: README.md  docker-compose.yml
research/rag_experiments/configs/: config.yaml
research/rag_experiments/configs/chunking/: chunking.yaml
research/rag_experiments/configs/data/: data.yaml
research/rag_experiments/configs/embedding/: embedding.yaml
research/rag_experiments/configs/eval/: eval.yaml
research/rag_experiments/configs/eval_llm/: eval_llm.yaml
research/rag_experiments/configs/llm/: llm.yaml
research/rag_experiments/configs/qdrant/: qdrant.yaml
research/rag_experiments/configs/retrieval/: retrieval.yaml
research/rag_experiments/notebooks/: 01_baseline.ipynb  02_eval_dataset_EDA.ipynb  03_baseline_evaluation.ipynb  04_phase1_experiments.ipynb
research/rag_experiments/results/: baseline_full_eval.json  compare_baseline_chunk128.json  compare_baseline_chunk512.json  compare_best_chunk128.json  compare_best_chunk512.json  embed_e5_chunk128.json  embed_gte_chunk128.json  embed_mpnet_chunk128.json  embed_rosberta_chunk128.json  final_full_eval.json  gen_hybrid_qwen2.5.1.5b.json  gen_hybrid_qwen2.5.7b-instruct.json  gen_hybrid_qwen3.8b.json  gen_qwen2.5.1.5b.json  gen_qwen2.5.7b-instruct.json  gen_qwen3.8b.json  hybrid_rrf_10x10.json  hybrid_rrf_20x20.json  hybrid_rrf_50x50.json  hybrid_weighted_10x10_a03.json  hybrid_weighted_10x10_a05.json  hybrid_weighted_10x10_a07.json  hybrid_weighted_20x20_a03.json  hybrid_weighted_20x20_a05.json  hybrid_weighted_20x20_a07.json  hybrid_weighted_50x50_a03.json  hybrid_weighted_50x50_a05.json  hybrid_weighted_50x50_a07.json  meta_off.json  meta_on.json  retriever_dense.json  temp_0.0_run0.json  temp_0.0_run1.json  temp_0.0_run2.json  temp_0.1_run0.json  temp_0.1_run1.json  temp_0.1_run2.json  temp_0.2_run0.json  temp_0.2_run1.json  temp_0.2_run2.json  (+62 more)
research/rag_experiments/scripts/: build_manifest.py  generate_eval_dataset.py  index_documents.py  prepare_chunk_datasets_and_collections.py  run_evaluation.py
research/rag_experiments/src/: chunking.py  config.py  eval.py  eval_data.py  generation_eval.py  generator.py  hybrid_fusion.py  indexer.py  qa_dataset_generator.py  retriever.py  retriever_eval.py
service/boardgame-rules-backend/: Dockerfile  Dockerfile.test  pyproject.toml
service/boardgame-rules-backend/alembic/: env.py
service/boardgame-rules-backend/alembic/versions/: 2396e7fd650f_rulesdocument_add_source_file_fields.py  b0df2e935acc_initial.py
service/boardgame-rules-backend/boardgame_rules_backend/: cli.py  dependencies.py  exception_handlers.py  exceptions.py  main.py
service/boardgame-rules-backend/boardgame_rules_backend/api/: utils.py
service/boardgame-rules-backend/boardgame_rules_backend/auth/: jwt.py  utils.py
service/boardgame-rules-backend/boardgame_rules_backend/connectors/: __init__.py  hybrid_fusion.py  qdrant.py  redis.py  s3.py
service/boardgame-rules-backend/boardgame_rules_backend/database/: __init__.py  postgres.py
service/boardgame-rules-backend/boardgame_rules_backend/models/: __init__.py  background_tasks.py  games.py  users.py
service/boardgame-rules-backend/tests/: conftest.py
(+107 files in other folders)
