[project]
name = "data-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dvc>=3.66.1",
    "fast-langdetect>=1.0.0",
    "fire>=0.7.1",
    "httpx>=0.28.1",
    "huggingface-hub>=0.36.0",
    "hydra-core>=1.3.2",
    "ipykernel>=7.1.0",
    "langchain-core>=1.2.13",
    "litellm>=1.81.5",
    "llama-index-core>=0.14.13",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-ollama>=0.9.1",
    "llama-index-postprocessor-sbert-rerank>=0.4.2",
    "llama-index-vector-stores-qdrant>=0.9.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "pillow>=12.1.0",
    "pip>=25.3",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "pytesseract>=0.3.13",
    "qdrant-client>=1.16.2",
    "rapidfuzz>=3.14.3",
    "sacrebleu>=2.6.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
